# SlintUITemplates

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  fill_doc_comments.ps1
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/workflows/: ci.yml  publish.yml
config/: desktop.toml  settings.toml
docs/: architecture.md  components.md  dsl.md  getting-started.md  platform-rules.md  settings.md  theme-system.md  tokens.md
examples/android/: main.rs
examples/desktop/: main.rs
examples/docs/: main.rs  pages.rs
examples/macos/: main.rs
examples/mobile/: main.rs
examples/rhai/: demo.rhai  main.rs
examples/steam/: main.rs
examples/viewer/: demo_frame.rs  main.rs
man/: MANIFEST.json  MANIFEST.md  examples_docs_gateway_mod.rs.json  examples_docs_gateway_mod.rs.md  examples_docs_pages.rs.json  examples_docs_pages.rs.md  examples_viewer_demo_frame.rs.json  examples_viewer_demo_frame.rs.md  src_adapter_apply.rs.json  src_adapter_apply.rs.md  src_adapter_callbacks.rs.json  src_adapter_callbacks.rs.md  src_adapter_config.rs.json  src_adapter_config.rs.md  src_adapter_mod.rs.json  src_adapter_mod.rs.md  src_adapter_state.rs.json  src_adapter_state.rs.md  src_bindings_mod.rs.json  src_bindings_mod.rs.md  src_bindings_rhai_api.rs.json  src_bindings_rhai_api.rs.md  src_bindings_rhai_dsl.rs.json  src_bindings_rhai_dsl.rs.md  src_bindings_rhai_mod.rs.json  src_bindings_rhai_mod.rs.md  src_docs_mod.rs.json  src_docs_mod.rs.md  src_docs_parser.rs.json  src_docs_parser.rs.md  src_dsl_apply.rs.json  src_dsl_apply.rs.md  src_dsl_builder.rs.json  src_dsl_builder.rs.md  src_dsl_error.rs.json  src_dsl_error.rs.md  src_dsl_icons.rs.json  src_dsl_icons.rs.md  src_dsl_mod.rs.json  src_dsl_mod.rs.md  (+546 more)
man/src/: docs.json  docs.md  lib.json  lib.md
man/ui/: lib.json  lib.md
proj/: RULES  rulestools.toml
rules/slint/: composition.md
rules/winui/: fluent-icons.md  fluent2-tokens.md  placement.md
src/: docs.rs  lib.rs  main.rs
src/adapter/: apply.rs  callbacks.rs  config.rs  mod.rs  state.rs  tests.rs
src/bindings/: mod.rs
src/docs/: mod.rs  parser.rs
src/dsl/: apply.rs  builder.rs  error.rs  icons.rs  mod.rs  tests.rs  types.rs
src/gateway/: grid.rs  mod.rs  scaffold.rs  scripts.rs  settings.rs  view_config.rs
src/grid/: config.rs  mod.rs  zone.rs
src/layout/: constraints.rs  dsl_v2.rs  mod.rs  named_parser.rs  parser.rs  ratio_solver.rs  solver.rs
src/man/: MANIFEST.json  MANIFEST.md  lib.json  lib.md  main.json  main.md  viewer.bat
src/pal/: dark_mode.rs  imp.rs  mod.rs
src/platform/: imp.rs  mod.rs
src/settings/: apply.rs  defaults.rs  mod.rs
src/shell/: mod.rs  models.rs  platform.rs
src/view_config/: error.rs  eval.rs  mod.rs
tests/: consumer_integration.rs
tools/docgen/: Cargo.toml
tools/scanners/: Cargo.toml
tools/scanners/src/: main.rs
tools/slintui/: Cargo.toml
ui/: app-window.slint  components.slint  lib-dev.slint  lib.slint
ui/demo/: DemoMobileNav.slint  MobilePhoneFrame.slint  demo.slint  home-view.slint  list-view.slint  settings-view.slint
ui/desktop/: app-window.slint  content-area.slint  nav-bar.slint  side-bar-row.slint  side-bar.slint  status-bar.slint  types.slint
ui/docs/: MdBlockquote.slint  MdCodeBlock.slint  MdHeading.slint  MdListItem.slint  MdParagraph.slint  MdTable.slint  doc-block.slint  docs-app.slint  markdown-view.slint
ui/globals/: NavId.slint  Variants.slint  ViewId.slint  strings.slint  theme.slint  variants.slint
ui/man/: MANIFEST.json  MANIFEST.md  components.json  components.md  lib.json  lib.md  viewer.bat
ui/mobile/: MobileNavItem.slint  app-window.slint
ui/modules/: DragHandle.slint  PanelContainer.slint  PanelSlot.slint  ViewSlot.slint
ui/mother/: AppWindow.slint
ui/shared/: ClearButton.slint  ContextMenuContent.slint  ContextMenuEntry.slint  DataTableHeaderCell.slint  MultiSelectChip.slint  MultiSelectDropdown.slint  MultiSelectItem.slint  PasswordToggle.slint  PopupContent.slint  RadioButton.slint  RadioGroup.slint  SpinValueDisplay.slint  StepperCircle.slint  accordion-row.slint  accordion.slint  alert.slint  avatar.slint  badge.slint  breadcrumb.slint  button.slint  canvas-image.slint  canvas-path.slint  card.slint  cbf-overflow-btn.slint  cbf-primary-btn.slint  cbf-secondary-row.slint  checkbox.slint  chip.slint  command-bar-flyout.slint  context-menu.slint  data-table.slint  date-picker.slint  dialog.slint  divider.slint  drawer-header.slint  drawer.slint  dropdown-entry.slint  dropdown-menu.slint  empty-state.slint  flyout-inner.slint  (+34 more)
ui/shell/: app-shell.slint  types.slint
ui/state/: Theme.slint  desktop-types.slint  durations.slint  nav-id.slint  scale.slint  settings.slint  sizes.slint  theme-mode.slint  variants.slint  view-id.slint
ui/tokens/: colors.slint  scale.slint  sizes.slint  spacing.slint  theme.slint  typography.slint
ui/viewer/: BiDirDemo.slint  ColHandleDemo.slint  ContextMenuDemoArea.slint  IconRow.slint  IconTile.slint  PageData.slint  PageIcons.slint  PageLayout.slint  RowHandleDemo.slint  ScrollDemoRow.slint  ViewSlotDemo.slint  page-app-shell.slint  page-buttons.slint  page-canvas.slint  page-data.slint  page-display.slint  page-feedback.slint  page-icons.slint  page-inputs.slint  page-layout.slint  page-navigation.slint  page-panels.slint  page-popups.slint  page-selection.slint  page-utilities.slint  popup-cbf-demo.slint  popup-dropdown-demo.slint  popup-flyout-demo.slint  popup-popover-demo.slint  popup-teaching-tip-demo.slint  viewer-content.slint  viewer-section.slint  viewer-topbar.slint  viewer.slint
ui/views/: home.slint  list.slint  nav-bar.slint  settings.slint
ui/widgets/: ClearButton.slint  card.slint  (+87 more)
(+1061 files in other folders)
