[package]
name = "slint-ui-templates"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Composable Slint UI building blocks — mother-child pattern, token-driven"
keywords    = ["slint", "ui", "gui", "layout", "templates"]
categories  = ["gui", "template-engine"]
repository  = "https://github.com/lpmwfx/SlintUITemplates"

[[bin]]
name = "slint-ui-templates"
path = "src/main.rs"

[[bin]]
name = "slintui"
path = "src/bin/slintui.rs"

[lib]
name = "slint_ui_templates"
path = "src/lib.rs"

[[example]]
name = "desktop"
path = "examples/desktop/main.rs"

[[example]]
name = "rhai-demo"
path = "examples/rhai/main.rs"

[[example]]
name = "viewer"
path = "examples/viewer/main.rs"

[[example]]
name = "mobile"
path = "examples/mobile/main.rs"

[[example]]
name = "docs"
path = "examples/docs/main.rs"

[dependencies]
slint = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
rhai            = { version = "1" }
pulldown-cmark  = { version = "0.12", default-features = false, features = ["getopts"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls"] }
i-slint-backend-winit = "1.15"
raw-window-handle = "0.6"

[dev-dependencies]
i-slint-backend-testing = "1.15"

[build-dependencies]
slint-build = "1.15"
