[workspace]
members = [".", "tools/slintui", "tools/docgen", "tools/scanners"]

[package]
name = "slint-ui-templates"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Composable Slint UI building blocks — mother-child pattern, token-driven"
keywords    = ["slint", "ui", "gui", "layout", "templates"]
categories  = ["gui", "template-engine"]
links       = "slint-ui-templates"
repository  = "https://github.com/lpmwfx/SlintUITemplates"
include     = ["src/**/*", "ui/**/*", "!ui/viewer/**", "!ui/demo/**", "!ui/lib-dev.slint", "assets/**/*", "build.rs", "config/**/*", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "slint_ui_templates"
path = "src/lib.rs"

[[example]]
name = "desktop"
path = "examples/desktop/main.rs"

[[example]]
name = "rhai-demo"
path = "examples/rhai/main.rs"
required-features = ["rhai"]

[[example]]
name = "viewer"
path = "examples/viewer/main.rs"

[[example]]
name = "mobile"
path = "examples/mobile/main.rs"

[[example]]
name = "docs"
path = "examples/docs/main.rs"
required-features = ["markdown"]

[[example]]
name = "android"
path = "examples/android/main.rs"

[[example]]
name = "steam"
path = "examples/steam/main.rs"

[[example]]
name = "macos"
path = "examples/macos/main.rs"

[features]
default = ["rhai", "markdown"]
rhai     = ["dep:rhai"]
markdown = ["dep:pulldown-cmark"]

[dependencies]
slint = "1"
tracing = "0.1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
rhai            = { version = "1", optional = true }
pulldown-cmark  = { version = "0.12", default-features = false, features = ["getopts"], optional = true }
thiserror       = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_Controls"] }
i-slint-backend-winit = "1.15"
raw-window-handle = "0.6"

[dev-dependencies]
i-slint-backend-testing = "1.15"
tiny-skia               = "0.11"

[build-dependencies]
slint-build = "1.15"
